--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "datasciencefolio",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://mohamed-achek.github.io",
   "scripts": {
     "build": "react-scripts build",
     "predeploy": "npm run build",
@@ -18,7 +18,6 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "fs": "0.0.1-security",
-    "gh-pages": "^2.1.1",
     "graphql": "^14.5.8",
     "lottie-web": "^5.7.11",
     "node-fetch": "^2.6.7",
@@ -43,6 +42,7 @@
   "devDependencies": {
     "@iconify/icons-logos": "^1.0.9",
     "@iconify/react": "^1.1.1",
+    "gh-pages": "^6.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "2.0.5"
