Reorder scripts in package.json for consistency

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.1.0",
   "homepage": "https://mohamed-achek.github.io",
   "scripts": {
-  "build": "react-scripts build",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -b gh-pages -d build",
-  "eject": "react-scripts eject",
-  "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-  "test": "react-scripts test"
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
